메인페이지 & 졸업요건검사 페이지 완료

--- a/src/container/Home/index.module.css
+++ b/src/container/Home/index.module.css
@@ -57,12 +57,14 @@
 .container .intro_area .contents button {
     margin: 0 auto;
 }
+
 .container .description_area {
     width: 80%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
     box-sizing: border-box;
+    padding-top: 160px;
 } 
 
 @media screen and (max-width: 850px) {
