--- a/src/component/Navigation/index.module.css
+++ b/src/component/Navigation/index.module.css
@@ -11,15 +11,19 @@
     transition: .3s ease all;
     z-index: 100;
 }
+.container .hidden {
+    visibility: hidden;
+    opacity: 0;
+}
 .container.background_white {
-    background-color: var(--color-white);
-    box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
+    background-color: var(--color-nav-bg);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 }
 .container .logo {
     height: 21px;
 }
 .container .navlist {
-    background-color: var(--color-blue-2-opacity-10);
+    background-color: var(--color-navlist-bg);
     padding: 4px;
     box-sizing: border-box;
     height: 40px;
