--- a/src/component/ProgressBar/index.module.css
+++ b/src/component/ProgressBar/index.module.css
@@ -1,5 +1,6 @@
 .progress_bg {
     flex: 1;
+    min-width: 100px;
     background-color: var(--color-white);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.08);
     border-radius: 7px;
@@ -8,5 +9,5 @@
 .progress_bar {
     height: 100%;
     border-radius: 7px;
-    transition: width ease 1s;
+    transition: width ease 1.5s;
 }
