--- a/src/container/Graduation/index.module.css
+++ b/src/container/Graduation/index.module.css
@@ -1,25 +1,51 @@
 .container {
-    width: 82%;
-    min-height: calc(100vh - 70px);
-    margin: 50px auto 0 auto;
-    box-sizing: border-box;
-    background-color: var(--color-white);
-    padding: 40px 5.2%;
-    background-color: var(--color-white);
-    border-radius: 30px;
-    margin-bottom: 60px;
+    width: 90%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 48px 1rem 68px 1rem;
 }
-.title {
-    font-weight: 800;
-    font-size: 28px;
-    letter-spacing: 0.32px;
+.container .top_bar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     margin-bottom: 30px;
+}
+.container .top_bar .title {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
     color: var(--color-blue-2);
 }
-
-@media screen and (max-width:1023px) {
-    .container {
-        width: 95%;
-        margin-top: 30px;
-    }
+.container .contents {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
+.container .contents .row1 {
+    width: 100%;
+    display: flex;
+    margin-bottom: 20px;
+    height: 420px;
+}
+.container .contents .row1 .total_section {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+}
+.container .contents .row1 .requirement_section {
+    display: flex;
+    flex-direction: column;
+    flex: 2.5;
+}
+.container .contents .row2 {
+    width: 100%;
+    height: 200px;
+}
+@media screen and (max-width: 768px) {
+    .container {
+      width: 100%;
+      padding: 0 1.5rem;
+    }
+  }
