--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -44,17 +44,25 @@
 
     /* new color */
     --color-bg: #F5F3F1;
+    --color-nav-bg: rgba(255, 255, 255, 0.8);
+    --color-navlist-bg: #DEDADE;
     
     --color-opacity-0: rgba(0,0,0,0);
 
     --color-white: #ffffff;
+    --color-white-opacity-40: rgba(255, 255, 255, 0.4);
     --color-white-opacity-50: rgba(255, 255, 255, 0.5);
+
 
     --color-blue-0: #6178FA;
     --color-blue-0-opacity-20: rgba(97,120, 250, 0.2);
     --color-blue-1: #160095;
+    --color-blue-1-opacity-50: rgba(22, 0, 149, 0.5);
     --color-blue-2: #06003A;
     --color-blue-2-opacity-10: rgba(6, 0, 58, 0.1);
+    --color-blue-2-opacity-20: rgba(6, 0, 58, 0.2);
     --color-blue-2-opacity-30: rgba(6, 0, 58, 0.3);
+    --color-blue-2-opacity-40: rgba(6, 0, 58, 0.4);
+    --color-blue-2-opacity-50: rgba(6, 0, 58, 0.5);
     --color-blue-2-opacity-60: rgba(6, 0, 58, 0.6);
 }
