--- a/src/component/ProgressBar/index.module.css
+++ b/src/component/ProgressBar/index.module.css
@@ -1,8 +1,7 @@
 .progress_bg {
     flex: 1;
     min-width: 100px;
-    background-color: var(--color-white);
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.08);
+    background-color: var(--color-blue-2-opacity-5);
     border-radius: 7px;
     overflow-x: hidden;
 }
