--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -48,6 +48,7 @@
     --color-navlist-bg: #DEDADE;
     
     --color-opacity-0: rgba(0,0,0,0);
+    --color-opacity-30: rgba(0,0,0,0.3);
 
     --color-white: #ffffff;
     --color-white-opacity-40: rgba(255, 255, 255, 0.4);
@@ -59,6 +60,7 @@
     --color-blue-1: #160095;
     --color-blue-1-opacity-50: rgba(22, 0, 149, 0.5);
     --color-blue-2: #06003A;
+    --color-blue-2-opacity-5: rgba(6, 0, 58, 0.05);
     --color-blue-2-opacity-10: rgba(6, 0, 58, 0.1);
     --color-blue-2-opacity-20: rgba(6, 0, 58, 0.2);
     --color-blue-2-opacity-30: rgba(6, 0, 58, 0.3);
