--- a/src/container/TimetableCreateSurvey/component/QuestionForms/CourseSearchSelect/index.module.css
+++ b/src/container/TimetableCreateSurvey/component/QuestionForms/CourseSearchSelect/index.module.css
@@ -1,25 +1,26 @@
 .container {
-    width: 600px;
-    height: 100%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     background-color: var(--color-blue-2-opacity-5);
     padding: 14px;
     border-radius: 10px;
     box-sizing: border-box;
+    min-width: 600px;
+    height: 400px;
 }
 .container .header {
     width: 100%;
     display: flex;
     margin-bottom: 12px;
 }
-.container .header span:first-child {
-    flex: 2;
+.container .header .header_item:first-child {
+    flex: 3;
 }
-.container .header span:nth-child(2) {
+.container .header .header_item:nth-child(2) {
     flex: 1;
 }
-.container .header span {
+.container .header .header_item {
     margin-right: 8px;
     text-align: left;  
     font-size: 12px;
@@ -30,6 +31,12 @@
 }
 .container .header .space {
     width: 40px;
+}
+.container .input_container {
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    height: 380px;
 }
 .container .input_row {
     width: 100%;
@@ -44,12 +51,18 @@
     flex: 1;
 }
 .container .input_row input {
+    min-width: 0;
+    color: var(--color-blue-2);
     font-size: 12px;
     font-weight: 600;
-    padding: 14px;
     border-radius: 4px;
     border: 0;
+    padding: 0;
+    padding-left: 14px;
     margin-right: 8px;
+}
+.container .input_row input::placeholder {
+    color: var(--color-blue-2-opacity-30);
 }
 .container .input_row .remove_button {
     width: 40px;
@@ -61,4 +74,16 @@
 }
 .container .input_row .remove_button img {
     width: 9px;
+}
+.container .addButton {
+    margin-top: 10px;
+    width: 100%;
+    height: 40px;
+    background-color: var(--color-white);
+    border-radius: 4px;
+    border: 0;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: 600;
+    color: var(--color-blue-2);
 }
