--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -69,4 +69,7 @@
     --color-blue-2-opacity-40: rgba(6, 0, 58, 0.4);
     --color-blue-2-opacity-50: rgba(6, 0, 58, 0.5);
     --color-blue-2-opacity-60: rgba(6, 0, 58, 0.6);
+
+    --color-yellow-0: rgb(255, 191, 0);
+    --color-yellow-0-opacity-60: rgba(255, 191, 0, 0.6);
 }
