졸업요건분석 자세히보기 페이지 완성 및 마이페이지 jsx 작성(스타일링 X)

--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -17,6 +17,7 @@
     --color-blue-0-opacity-10: rgba(97,120, 250, 0.1);
     --color-blue-0-opacity-20: rgba(97,120, 250, 0.2);
     --color-blue-1: #160095;
+    --color-blue-1-opacity-10: rgba(22, 0, 149, 0.1);
     --color-blue-1-opacity-50: rgba(22, 0, 149, 0.5);
     --color-blue-2: #06003A;
     --color-blue-2-opacity-5: rgba(6, 0, 58, 0.05);
