--- a/src/component/Timetable/index.module.css
+++ b/src/component/Timetable/index.module.css
@@ -3,24 +3,12 @@
     background-color: var(--color-white);
     height: 560px;
     box-sizing: border-box;
-    padding: 46px 12px 0 50px;
+    padding: 46px 12px 0 46px;
     margin: 0 auto;;
-    border: 1px solid #E5E5E5;
+    border: 1px solid var(--color-bg);
     border-radius: 10px;
     transition: .2s ease;
     white-space: normal;
-}
-.container.active {
-    border: 3px solid var(--color-blue-1-opacity-80);
-    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.1);
-    transform: translateY(-20px);
-}
-.container.isHoverable:hover {
-    box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.1);
-    transform: translateY(-10px);
-}
-.container.isHoverable:hover .button_wrap {
-    display: flex;
 }
 .container .timetable_wrap {
     display: flex;
@@ -80,6 +68,22 @@
     box-sizing: border-box;
     word-break: normal!important;
 }
+.fadeIn4 {
+    animation: fadeIn4 1.4s ease;
+}
+.fadeIn3 {
+    animation: fadeIn3 1.4s ease;
+}
+.fadeIn2 {
+    animation: fadeIn2 1.4s ease;
+}
+.fadeIn1 {
+    animation: fadeIn1 1.4s ease;
+}
+.fadeIn5 {
+    animation: fadeIn5 1.4s ease;
+}
+
 .container .timetable_wrap .column .item_container .name {
     font-size: 9px;
     text-align: left;
@@ -97,25 +101,55 @@
     font-weight: 600;
 }
 
-.container .button_wrap {
-    width: 100%;
-    display: none;
-    justify-content: space-between;
-    margin-top: 10px;
-    gap: 10px;
-    animation: fadeIn 0.3s ease-in-out;
-    transform: translateX(-18px);
-}
-.container .button_wrap button {
-    height: 44px;
-    flex: 1;
-}
-
-@keyframes fadeIn {
-    from {
+@keyframes fadeIn1 {
+    0% {
         opacity: 0;
     }
-    to {
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fadeIn2 {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fadeIn3 {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }   
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fadeIn4 {
+    0% {
+        opacity: 0;
+    }
+    30% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fadeIn5 {
+    0% {
+        opacity: 0;
+    }
+    40% {
+        opacity: 0;
+    }
+    100% {
         opacity: 1;
     }
 }
