--- a/src/container/TimetableCreateSelect/index.module.css
+++ b/src/container/TimetableCreateSelect/index.module.css
@@ -23,8 +23,46 @@
 }
 .container .timetable_list {
     width: 100%;
-    height: 500px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
+    display: flex;
+    gap: 32px;
+}
+.container .timetable_wrap {
+    background-color: var(--color-white-opacity-50);
+    border: 1px solid var(--color-white);
+    border-radius: 10px;
+    padding: 4px;
+    flex: 1;
+    position: relative;
+    height: 560px;
+    transition: .5s ease;
+}
+.container .timetable_wrap:hover {
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+    height: 620px;
+}
+.container .timetable_wrap .button_wrap {
+    display: none;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px 0;
+    animation: fadeIn .5s ease;
+    position: absolute;
+    bottom: 0;
+    left: 4px;
+    right: 4px;
+}
+.container .timetable_wrap .button_wrap button {
+    flex: 1;
+    height: 44px;
+}
+.container .timetable_wrap:hover .button_wrap {
+    display: flex;
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
