ui 완성 및 로그인&강의검색(수정필요)&강의디테일(보완필요) api 연결 + zustand 사용자 인증 전역 관리 상태 추가

--- a/src/component/LoginPopupContents/index.module.css
+++ b/src/component/LoginPopupContents/index.module.css
@@ -43,7 +43,7 @@
 }
 .container .error {
     width: 100%;
-    color: var(--color-red);
+    color: var(--color-red-0);
     font-size: 12px;
     margin-top: 5px;
     text-align: left;
