--- a/src/component/Button/index.module.css
+++ b/src/component/Button/index.module.css
@@ -15,3 +15,7 @@
     background-color: var(--color-blue-2);
     color: var(--color-white);
 }
+.btn:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
