--- a/src/styles/variable.css
+++ b/src/styles/variable.css
@@ -14,6 +14,7 @@
 
 
     --color-blue-0: #6178FA;
+    --color-blue-0-opacity-5: rgba(97,120, 250, 0.05);
     --color-blue-0-opacity-10: rgba(97,120, 250, 0.1);
     --color-blue-0-opacity-20: rgba(97,120, 250, 0.2);
     --color-blue-1: #160095;
@@ -30,4 +31,6 @@
 
     --color-yellow-0: rgb(255, 191, 0);
     --color-yellow-0-opacity-60: rgba(255, 191, 0, 0.6);
+
+    --color-red-0: #E74C3C;
 }
