--- a/src/container/TimetableCreateSurvey/component/QuestionForms/CourseSearchSelect/index.module.css
+++ b/src/container/TimetableCreateSurvey/component/QuestionForms/CourseSearchSelect/index.module.css
@@ -30,7 +30,7 @@
     box-sizing: border-box;
 }
 .container .header .space {
-    width: 40px;
+    width: 98px;
 }
 .container .input_container {
     display: flex;
@@ -64,13 +64,19 @@
 .container .input_row input::placeholder {
     color: var(--color-blue-2-opacity-30);
 }
+.container .input_row input:disabled {
+    background-color: var(--color-blue-2-opacity-5);
+    opacity: 0.5;
+}
 .container .input_row .remove_button {
+    font-size: 12px;
     width: 40px;
     height: 40px;
     background-color: var(--color-white);
     border-radius: 4px;
     border: 0;
     cursor: pointer;
+    margin-right: 8px;
 }
 .container .input_row .remove_button img {
     width: 9px;
