--- a/src/component/TimeSelector/index.module.css
+++ b/src/component/TimeSelector/index.module.css
@@ -34,13 +34,13 @@
 }
 
 .timetableWrapper .cell {
-    border-bottom: 1px solid rgba(245, 243, 241, 0.80);;
-    background: #fff;
-    cursor: pointer;
-    transition: background 0.15s;
-    min-width: 40px;
-    height: 22.5px;
-    position: relative;
+  border-bottom: 1px solid rgba(245, 243, 241, 0.80);
+  background: #fff;
+  cursor: pointer;
+  transition: background 0.15s;
+  min-width: 40px;
+  height: 22.5px;
+  position: relative;
 }
 
 .timetableWrapper .selected {
@@ -54,22 +54,22 @@
   background: #D5D8EE;
 }
 .timetableWrapper.noSelecting .cell:hover {
-    background: #D5D8EE;
-  }
+  background: #D5D8EE;
+}
 .timetableWrapper .selectedStart {
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-  }
-  .timetableWrapper .selectedEnd {
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-  }
-  .timetableWrapper .selectedSingle {
-    border-radius: 4px;
-  }
-  .timetableWrapper .tempOverlap {
-    background: #3243A1;
-  }
-  .timetableWrapper .cell.tempOverlap:hover {
-    background: #3243A1;
-  }
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.timetableWrapper .selectedEnd {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.timetableWrapper .selectedSingle {
+  border-radius: 4px;
+}
+.timetableWrapper .tempOverlap {
+  background: #3243A1;
+}
+.timetableWrapper .cell.tempOverlap:hover {
+  background: #3243A1;
+}
